Add ATAC caption

--- a/IPYNB/PostAnnotationAnalysis.ipynb
+++ b/IPYNB/PostAnnotationAnalysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "27aafee6",
+   "id": "cb40eca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b7c2c6f",
+   "id": "8be500fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a77866ff",
+   "id": "6ee1451d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d229eae3",
+   "id": "ddef1cc8",
    "metadata": {},
    "source": [
     "# Reference transcriptomes"
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e4359820",
+   "id": "50986750",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3151c5e6",
+   "id": "64b0d8a7",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07bc7f20",
+   "id": "5c580b8d",
    "metadata": {},
    "source": [
     "# Overall Stats\n",
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "11597fe4",
+   "id": "35bed690",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "251b1182",
+   "id": "1e261b98",
    "metadata": {},
    "source": [
     "# Structural Category Breakdown\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7d6fb06e",
+   "id": "f1832af3",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb80077",
+   "id": "2b6226e1",
    "metadata": {},
    "source": [
     "# Isoforms\n",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9fcb00ea",
+   "id": "4482d185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9cf759a4",
+   "id": "133bdaa0",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72fe15f9",
+   "id": "f8f40b4e",
    "metadata": {},
    "source": [
     "# Mono- vs Multi-Exon Transcripts\n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dcd7424a",
+   "id": "b2fb6a3a",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "003a94d9",
+   "id": "1f2c670f",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d98a9b47",
+   "id": "1826e327",
    "metadata": {},
    "source": [
     "# Transcript Length"
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "96687933",
+   "id": "db1e7410",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaaee506",
+   "id": "68a4fe32",
    "metadata": {},
    "source": [
     "# Gene Expression"
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7cca7b73",
+   "id": "cf48a31e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "927b07b8",
+   "id": "1d6b19d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "af16d171",
+   "id": "c8d48527",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a4c67a71",
+   "id": "c110d023",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ab0f1e",
+   "id": "d76de073",
    "metadata": {},
    "source": [
     "# Flow cell counts"
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d6655656",
+   "id": "8d2bd3af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1d81c3d5",
+   "id": "05c77c83",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4143a14d",
+   "id": "45f4d654",
    "metadata": {},
    "source": [
     "# Coding vs Non-coding\n",
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "892a7da0",
+   "id": "e7e60a3d",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe21362",
+   "id": "546c0650",
    "metadata": {},
    "source": [
     "# Splice Junctions\n",
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1c25000f",
+   "id": "6eac5ebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d47798fe",
+   "id": "6a96edcb",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b012774c",
+   "id": "c538b0fb",
    "metadata": {},
    "source": [
     "# Intrapriming\n",
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e8bda6f0",
+   "id": "b1f7dd28",
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f803f902",
+   "id": "90311e18",
    "metadata": {},
    "source": [
     "# TSS ratio\n",
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5c0c4c08",
+   "id": "a447ef6d",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79e54577",
+   "id": "5c98fb7c",
    "metadata": {},
    "source": [
     "# Distance to annotated TSS and TES"
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b4136ed2",
+   "id": "43580fbe",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2960b6f0",
+   "id": "3c54881d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7ddca860",
+   "id": "814a4906",
    "metadata": {},
    "outputs": [
     {
@@ -1028,16 +1028,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f26f9bc",
+   "id": "9027ca18",
    "metadata": {},
    "source": [
-    "# ATAC profile"
+    "# ATAC profile\n",
+    "Similarly, ATAC coverage profile near TSS confirms complete annotation at 5'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6ec92342",
+   "id": "439f5f6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1afb07a4",
+   "id": "4ced6bdb",
    "metadata": {},
    "outputs": [
     {
